GPv3: Crash when deleting everything in edit mode #126131

Closed
opened 2024-08-09 12:35:20 +02:00 by Lukas Tönne · 1 comment
Member

System Information
system-info.txt

Blender Version
Broken: 4.3 main (86e7668b11)
Worked: 4.2

Short description of error
Crash in drawing code when deleting all content from a GPv3 object in edit mode

Exact steps for others to reproduce the error

  1. Make a grease pencil object
  2. add a few strokes
  3. go to edit mode
  4. select everything and delete
**System Information** [system-info.txt](/attachments/0c9f5ab9-6c97-4781-ad7d-4bccfa955f01) **Blender Version** Broken: 4.3 main (86e7668b11043955bb104e026335bca962dc29f9) Worked: 4.2 **Short description of error** Crash in drawing code when deleting all content from a GPv3 object in edit mode **Exact steps for others to reproduce the error** 1. Make a grease pencil object 2. add a few strokes 3. go to edit mode 4. select everything and delete
Lukas Tönne added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-08-09 12:35:21 +02:00
Lukas Tönne added this to the Module: Grease Pencil project 2024-08-09 12:35:21 +02:00
Member

Hi, can confirm. We have allocated the vertex buffer data but it's empty (pointing to garbage memory) because copy_transformed_positions has nothing to copy inside cache->edit_points.
We can surround the vertex buffer allocation with if (>0) statement, will check.

Hi, can confirm. We have allocated the vertex buffer data but it's empty (pointing to garbage memory) because `copy_transformed_positions` has nothing to copy inside cache->edit_points. We can surround the vertex buffer allocation with `if (>0)` statement, will check.
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-08-09 12:53:17 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-09 15:23:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126131
No description provided.