Fix #126131: GPv3: Crash when deleting everything in edit mode

Assert in debug build, allocated vertex buffer has garbage data when
total points in the drawing are zero, Nothing is copied to vertex buffers
from `copy_transformed_positions()`. To fix the crash, exit early when
the number of points is zero and execute `DRW_shgroup_call_no_cull`
macro when batch is non-null.

Pull Request: https://projects.blender.org/blender/blender/pulls/126134